--- a/style_desc_template.css
+++ b/style_desc_template.css
@@ -7,6 +7,7 @@ body {
 	font-size: 72px;
 	position: auto;
 	text-align: center;
+	color: #251200;
 	
 }
 
@@ -18,14 +19,14 @@ body {
 
 .navbar {
 	margin: 0 auto;
-	width: 812px;
+	width: 818px;
 	padding-top: 3px;
 	position: relative;
 }
 
 #nav_button {
 	background-color: #FFFFFF;
-	color: #000000;
+	color: #251200;
 	display: inline-block;
 	height: 40px;
 	width: 200px;
@@ -35,6 +36,7 @@ body {
 	vertical-align: middle;
 	line-height: 40px;
 	font-size: 32px;
+	margin-left: 1px;
 }
 
 
@@ -54,4 +56,5 @@ body {
 	padding-right: 20px;
 	text-align: justify;
 	font-size: 16px;
+	color: #251200;
 }
